<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressSearch"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/searchContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include
                android:id="@+id/toolbarFSearch"
                layout="@layout/toolbar"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPencaraian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbarFSearch" />

            <include
                android:id="@+id/noConn"
                layout="@layout/signal_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbarFSearch"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>