...
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/iconSearchView"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:searchIcon="@drawable/ic_search_black_24dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
...
